Fixed header alignment

--- a/public/stylesheets/x_style.css
+++ b/public/stylesheets/x_style.css
@@ -16,7 +16,7 @@ h1 {
 }
 
 #header div {
-    height: 80px;
+/*    height: 80px;*/
     overflow: hidden;
 }
 
